--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,420 @@
-body {
-  margin: 0;
+@charset "UTF-8";
+
+* {
   padding: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #36393f;
+  margin: 0;
+  border: 0;
 }
 
-.sm {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.sm a {
-  display: inline-block;
-  font-size: 50px;
-  margin: 0 0px;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
-  text-align: center;
-  color: #bf24b5;
-  transition: 0.3s all ease-in;
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+
+body {
+  background: #36393F;
+  padding: 0px 20px;
   position: relative;
 }
-.sm a:hover {
-  transform: scale(0.8);
-}
-.sm a:hover:after {
-  border-top: 4px solid;
-  border-bottom: 4px solid;
-  transform: skewY(-20deg);
-}
-.sm a:hover:before {
-  border-left: 4px solid;
-  border-right: 4px solid;
-  transform: skewX(20deg);
-}
-.sm a:before, .sm a:after {
-  content: "";
+
+body:before {
+  content: '↓';
   position: absolute;
-  box-sizing: border-box;
+  color: #B5B6B4;
+  font-size: 100px;
+  top: 50%;
+  left: 25%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+body:after {
+  content: '↓';
+  position: absolute;
+  color: #B5B6B4;
+  font-size: 100px;
+  top: 50%;
+  right: 25%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.socials__link {
+  display: inline-block;
+  font-size: 40px;
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  color: #bf24b5;
+  -webkit-transition: 0.4s all ease-in;
+  -o-transition: 0.4s all ease-in;
+  transition: 0.4s all ease-in;
+  position: relative;
+}
+
+.socials__link:after,
+.socials__link:before {
+  content: '';
+  position: absolute;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  transition: 0.3s all ease-out;
+  -webkit-transition: .3s all ease-out;
+  -o-transition: .3s all ease-out;
+  transition: .3s all ease-out;
 }
-.discord{
-	position: absolute;
-	bottom: 10%;
-	right: 50%;
-	-webkit-transform: translateX(50%);
-	-ms-transform: translateX(50%);
-	-o-transform: translateX(50%);
-	transform: translateX(50%);
-	border-radius: 8px;
-	padding: 5px;
-	background: #2E3033;
+
+.socials__link:hover {
+  -webkit-transform: scale(0.8);
+      -ms-transform: scale(0.8);
+          transform: scale(0.8);
 }
-.discord__container {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-ms-align-items: center;
-	align-items: center;
-	padding: 10px;
-	border-radius: 8px;
+
+.socials__link:hover:after {
+  border-top: 4px solid;
+  border-bottom: 4px solid;
+  -webkit-transform: skewY(-20deg);
+      -ms-transform: skewY(-20deg);
+          transform: skewY(-20deg);
 }
-.discord__icon{
-	color: #bf24b5;
-	font-size: 50px;
-	margin-right: 20px;
+
+.socials__link:hover:before {
+  border-left: 4px solid;
+  border-right: 4px solid;
+  -webkit-transform: skewX(20deg);
+      -ms-transform: skewX(20deg);
+          transform: skewX(20deg);
 }
-.discord__text{
-	color: #bf25b5;
-	font-weight: bold;
-	font-family: 'Montserrat';
-	font-size: 25px;
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 50px 0;
+  height: 100vh;
+}
+
+.discord {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 10px;
+  background: #2E3033;
+  padding: 8px 13px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 10px;
+}
+
+.discord__icon {
+  font-size: 40px;
+  color: #bf24b5;
+  -webkit-transform: translateY(2px);
+      -ms-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.discord__text {
+  margin-left: 10px;
+  color: #bf24b5;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  color: #B5B6B4;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-me {
+  margin-bottom: 50px;
+  max-width: 500px;
+  color: #B5B6B4;
+  font-family: 'Montserrat', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #2E3033;
+  padding: 20px 10px;
+  border-radius: 10px;
+  -webkit-transform: translateY(50px);
+      -ms-transform: translateY(50px);
+          transform: translateY(50px);
+}
+
+.about-me__container {
+  position: relative;
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-me__title {
+  font-weight: 500;
+  margin-bottom: 20px;
+  font-size: 33px;
+}
+
+.about-me__text {
+  font-size: 24px;
+  text-align: center;
+}
+
+.lang__button {
+  height: 50px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.ru {
+  color: #B5B6B4;
+  padding: 0px 7px;
+  height: 50px;
+  font-size: 40px;
+  font-family: 'Montserrat';
+  background: #1F1F1F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: .5s all ease;
+  -o-transition: .5s all ease;
+  transition: .5s all ease;
+}
+
+.ru:hover {
+  -webkit-transition: .5s all ease;
+  -o-transition: .5s all ease;
+  transition: .5s all ease;
+  background: #757575;
+  color: #000;
+}
+
+.ua {
+  color: #B5B6B4;
+  padding: 0px 7px;
+  height: 50px;
+  font-size: 40px;
+  font-family: 'Montserrat';
+  background: #1F1F1F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.ua:hover {
+  -webkit-transition: .5s all ease;
+  -o-transition: .5s all ease;
+  transition: .5s all ease;
+  background: #757575;
+  color: #000;
+}
+
+._active {
+  color: #fff;
+  height: 50px;
+  display: inline-block;
+  font-size: 40px;
+  font-family: 'Montserrat';
+  padding: 0px 7px;
+  background: #2E3033;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+._active:hover {
+  background: #2E3033;
+  -webkit-transition: .5s all ease;
+  -o-transition: .5s all ease;
+  transition: .5s all ease;
+  color: #fff;
+}
+
+@media (max-width: 700px) {
+  body:before {
+    left: 10%;
+    font-size: 50px;
+  }
+
+  body:after {
+    right: 10%;
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 500px) {
+  body:before {
+    left: 20px;
+  }
+
+  body:after {
+    right: 20px;
+  }
+
+  .about-me__text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 350px) {
+  body:before {
+    left: 10px;
+    font-size: 35px;
+  }
+
+  body:after {
+    right: 10px;
+    font-size: 35px;
+  }
 }
